[project]
name = "csda-version"
version = "0.4.1"
description = "Calculate the next csda-version"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "pytest>=9.0.3",
]

[project.scripts]
csda-version = "csda_version:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
